[metadata]
name = znc-web-log
version = 0.1
summary = ZNC Web Log project
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Sergey Lukjanov
author-email = me@slukjanov.name
home-page = http://zncweblogs.rtfd.org

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    zncweblogs

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
